Corrected margins on mobile about page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,6 @@ body {
     color: var(--white);
     font-family: 'Roboto', sans-serif;
 }
-
 html, body {
     overflow-x: hidden;
 }
@@ -34,21 +33,17 @@ a, a:active, a:visited {
     color: var(--white);
     text-decoration: none;
 }
-
 h2 {
     font-size: 2rem;
     font-weight: 300;
 }
-
 .highlight {
     color: var(--yellow);
 }
-
 .arrow-icon {
     font-size: 2rem;
     color: var(--yellow);
 }
-
 .social-icon {
     padding: 1rem;
     font-size: 3rem;
@@ -64,7 +59,6 @@ h2 {
     position: relative;
     overflow-x: hidden;
 }
-
 .container {
     max-width: min(80%, 800px);
     margin: 0 auto;
@@ -72,7 +66,6 @@ h2 {
 .full-height {
     min-height: 100vh;
 }
-
 .flex-y {
     display: flex;
     flex-direction: column;
@@ -90,21 +83,17 @@ h2 {
 header {
     margin: 3rem 0;
 }
-
 header.profile-header {
     margin: 3rem 0 0 0;
 }
-
 .logo {
     max-height: 4rem;
 }
-
 .icon {
     max-width: 8rem;
 
     margin-top: 2.5rem;
 }
-
 .profile-picture {
     max-width: 20rem;
     border-radius: 1rem;
@@ -166,15 +155,15 @@ header.profile-header {
 footer {
     margin: 1rem 0;
 }
-
 footer p {
     font-weight: 300;
 }
-
 footer p b {
     font-size: 1.2rem;
     font-weight: 400;
 }
+
+/* Media queries */
 
 @media (max-width: 700px) {
     html {
@@ -182,6 +171,9 @@ footer p b {
     }
     header {
         margin: 1rem 0;
+    }
+    header.profile-header {
+        margin: 1rem 0 0 0;
     }
     #card-about span {
         display: none;
